--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    
-    
     <title>Typing test - Improve and test your typing skills!</title>
 </head>
 <body>
+    <h1>Typing Test | Improve and test your typing skills! </h1>
     <main>
         <section id="game">
             <time></time>
             <p></p>
             <input type="text" autofocus>
         </section>
+        <section id="results"></section>
     </main>
     <script src="index.js"></script>
 </body>
