styles and progress bar

--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
     
     <main>
         <section id="game">
+            <div class="progress-container">
+                <div class="progress-bar" id="progress-bar"></div>
+            </div>
             <time></time>
             <p></p>
             <input type="text" autofocus>
         </section>
         <section id="results"></section>
     </main>
+    
     <script src="index.js"></script>
 </body>
 </html>
