--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" href="styles.css">
     <title>Typing test - Improve and test your typing skills!</title>
     
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     
 
 </head>
 <body>
     <header>
-        <span class="material-symbols-rounded">
             keyboard_external_input
             </span>
         <h1>Typing Test | Improve and test your typing skills! </h1>
